# web_scrapping

backend/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/backend/: main.py
backend/backend/data/: config.py  config.sql  crud.py  database.py
backend/backend/routers/: route_1.py
backend/backend/schemas/: database_schema.py
backend/backend/utils/: get_eth0.py
backend/backend/utils/config/: .env  database_config.py
frontend/: pyproject.toml
